--- a/style/main.scss
+++ b/style/main.scss
@@ -1,7 +1,84 @@
 @import "variables.scss";
 
-.container {
-    h1 {
+#header {
+    background-color: $primary-color;
+    .header-container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: 0 auto;
+        padding: 10px 5%;
+        max-width: 1200px;
+        .logo {
+            color: $white;
+        }
+        .nav ul {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            li {
+                margin: 0 10px;
+                list-style: none;
+                a {
+                    color: $white;
+                    text-decoration: none;
+                }
+            }
+        }
+        .btn {
+            outline: none;
+            border: none;
+        }
+        .sign-up {
+            background-color: $light-green;
+            border-radius: 8px;
+        }
+        .login {
+            color: $white;
+        }
+        .mobile {
+            .menu-icon {
+                display: block;
+            }
+            .close-icon {
+                display: none;
+            }
+        }
+    }
+    #nav-mobile {
+        display: none;
+        position: absolute;
+        width: 100%;
+        height: 90vh;
+        z-index: 1;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background: $light-green;
+        ul {
+            li {
+                list-style: none;
+                a {
+                    text-decoration: none;
+                    color: $primary-color;
+                    font-size: 24px;
+                }
+            }
+        }
+        border-top: 1px solid $primary-color;
         color: $primary-color;
+        .sign-up {
+            background-color: $primary-color;
+            color: $white;
+            border-radius: 8px;
+        }
+    }
+}
+
+@media (min-width: 768px) {
+    #header {
+        .header-container {
+            padding: 10px 20px;
+        }
     }
 }
