--- a/style/main.scss
+++ b/style/main.scss
@@ -39,6 +39,7 @@
         .mobile {
             .menu-icon {
                 display: block;
+                cursor: pointer;
             }
             .close-icon {
                 display: none;
@@ -74,11 +75,80 @@
         }
     }
 }
+#hero-section {
+    max-width: 600px;
+    text-align: center;
+    margin: 1.5rem auto;
+    .banner {
+        width: 50%;
+    }
+    .title {
+        font-size: 30px;
+        font-weight: 700;
+        color: $dark;
+    }
+    .description {
+        font-size: 14px;
+        color: $primary-color;
+    }
+    .email-input {
+        position: relative;
+        max-width: 460px;
+        margin: 0 auto;
+        .email {
+            width: 100%;
+            height: 48px;
+            border: 1px solid $primary-color;
+            border-radius: 8px;
+            padding: 0 20px;
+            outline: none;
+            &::placeholder {
+                color: rgba(32, 72, 79, 0.2);
+                font-size: 18px;
+            }
+        }
+        .sign-up {
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: 96px;
+            height: 48px;
+            border: none;
+            border: 1px solid $primary-color;
+            border-left: unset;
+            background: $light-green;
+            border-top-right-radius: 8px;
+            border-bottom-right-radius: 8px;
+        }
+    }
+}
 
 @media (min-width: 768px) {
     #header {
         .header-container {
             padding: 10px 20px;
+        }
+    }
+    #hero-section {
+        margin: 3rem auto;
+        .banner {
+            width: 50%;
+        }
+        .title {
+            font-size: 50px;
+        }
+        .description {
+            font-size: 18px;
+        }
+        .email-input {
+            .email {
+                height: 58px;
+                padding: 0 20px;
+            }
+            .sign-up {
+                width: 136px;
+                height: 58px;
+            }
         }
     }
 }
