--- a/style/main.scss
+++ b/style/main.scss
@@ -1,6 +1,11 @@
 @import "variables.scss";
 
 #header {
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
     background-color: $primary-color;
     .header-container {
         display: flex;
@@ -50,7 +55,7 @@
         display: none;
         position: absolute;
         width: 100%;
-        height: 90vh;
+        height: 100vh;
         z-index: 1;
         flex-direction: column;
         justify-content: center;
@@ -76,9 +81,10 @@
     }
 }
 #hero-section {
-    max-width: 600px;
+    max-width: 610px;
     text-align: center;
     margin: 1.5rem auto;
+    padding: 0 5%;
     .banner {
         width: 50%;
     }
@@ -122,6 +128,43 @@
         }
     }
 }
+#team {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    text-align: center;
+    padding: 0 5%;
+    .title {
+        font-size: 25px;
+        color: $dark;
+    }
+    .description {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 150%;
+        color: $dark;
+    }
+    .team-member {
+        .team-member-name {
+            font-size: 18px;
+            color: $dark;
+        }
+        .team-img {
+            max-width: 225px;
+        }
+        .position {
+            color: $primary-color;
+            font-size: 13px;
+        }
+        &:hover {
+            opacity: 0.5;
+            cursor: pointer;
+        }
+    }
+}
 
 @media (min-width: 768px) {
     #header {
@@ -148,6 +191,26 @@
             .sign-up {
                 width: 136px;
                 height: 58px;
+            }
+        }
+    }
+    #team {
+        .title {
+            font-size: 40px;
+        }
+        .description {
+            font-size: 16px;
+        }
+        .team-member {
+            .team-member-name {
+                font-size: 24px;
+            }
+            .team-img {
+                max-width: 240px;
+            }
+            .position {
+                color: $primary-color;
+                font-size: 18px;
             }
         }
     }
