--- a/style/main.css
+++ b/style/main.css
@@ -1,4 +1,4 @@
-#header {
+.body #header {
   position: sticky;
   top: 0;
   left: 0;
@@ -6,7 +6,7 @@
   z-index: 1;
   background-color: #20484f;
 }
-#header .header-container {
+.body #header .header-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -14,41 +14,42 @@
   padding: 10px 5%;
   max-width: 1200px;
 }
-#header .header-container .logo {
+.body #header .header-container .logo {
   color: #fff;
+  font-size: 28px;
 }
-#header .header-container .nav ul {
+.body #header .header-container .nav ul {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-#header .header-container .nav ul li {
+.body #header .header-container .nav ul li {
   margin: 0 10px;
   list-style: none;
 }
-#header .header-container .nav ul li a {
+.body #header .header-container .nav ul li a {
   color: #fff;
   text-decoration: none;
 }
-#header .header-container .btn {
+.body #header .header-container .btn {
   outline: none;
   border: none;
 }
-#header .header-container .sign-up {
+.body #header .header-container .sign-up {
   background-color: #b8e4da;
   border-radius: 8px;
 }
-#header .header-container .login {
+.body #header .header-container .login {
   color: #fff;
 }
-#header .header-container .mobile .menu-icon {
+.body #header .header-container .mobile .menu-icon {
   display: block;
   cursor: pointer;
 }
-#header .header-container .mobile .close-icon {
+.body #header .header-container .mobile .close-icon {
   display: none;
 }
-#header #nav-mobile {
+.body #header #nav-mobile {
   display: none;
   position: absolute;
   width: 100%;
@@ -61,44 +62,43 @@
   border-top: 1px solid #20484f;
   color: #20484f;
 }
-#header #nav-mobile ul li {
+.body #header #nav-mobile ul li {
   list-style: none;
 }
-#header #nav-mobile ul li a {
+.body #header #nav-mobile ul li a {
   text-decoration: none;
   color: #20484f;
   font-size: 24px;
 }
-#header #nav-mobile .sign-up {
+.body #header #nav-mobile .sign-up {
   background-color: #20484f;
   color: #fff;
   border-radius: 8px;
 }
-
-#hero-section {
+.body #hero-section {
   max-width: 610px;
   text-align: center;
   margin: 1.5rem auto;
   padding: 0 5%;
 }
-#hero-section .banner {
+.body #hero-section .banner {
   width: 50%;
 }
-#hero-section .title {
+.body #hero-section .title {
   font-size: 30px;
   font-weight: 700;
   color: #072125;
 }
-#hero-section .description {
+.body #hero-section .description {
   font-size: 14px;
   color: #20484f;
 }
-#hero-section .email-input {
+.body #hero-section .email-input {
   position: relative;
   max-width: 460px;
   margin: 0 auto;
 }
-#hero-section .email-input .email {
+.body #hero-section .email-input .email {
   width: 100%;
   height: 48px;
   border: 1px solid #20484f;
@@ -106,11 +106,11 @@
   padding: 0 20px;
   outline: none;
 }
-#hero-section .email-input .email::placeholder {
+.body #hero-section .email-input .email::placeholder {
   color: rgba(32, 72, 79, 0.2);
   font-size: 18px;
 }
-#hero-section .email-input .sign-up {
+.body #hero-section .email-input .sign-up {
   position: absolute;
   top: 0;
   right: 0;
@@ -123,8 +123,7 @@
   border-top-right-radius: 8px;
   border-bottom-right-radius: 8px;
 }
-
-#team {
+.body #team {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -134,118 +133,177 @@
   text-align: center;
   padding: 0 5%;
 }
-#team .title {
+.body #team .title {
   font-size: 25px;
   color: #072125;
 }
-#team .description {
+.body #team .description {
   font-weight: 400;
   font-size: 14px;
   line-height: 150%;
   color: #072125;
 }
-#team .team-member .team-member-name {
+.body #team .team-member .team-member-name {
   font-size: 18px;
   color: #072125;
 }
-#team .team-member .team-img {
+.body #team .team-member .team-img {
   max-width: 225px;
 }
-#team .team-member .position {
+.body #team .team-member .position {
   color: #20484f;
   font-size: 13px;
 }
-#team .team-member:hover {
+.body #team .team-member:hover {
   opacity: 0.5;
   cursor: pointer;
 }
-
-#feature-blocks .feature-blocks-divider {
+.body #feature-blocks .feature-blocks-divider {
   width: 100%;
 }
-#feature-blocks .feature-blocks-container {
+.body #feature-blocks .feature-blocks-container {
   background: #20484f;
   margin-top: -7px;
 }
-#feature-blocks .feature-blocks-container .content {
+.body #feature-blocks .feature-blocks-container .content {
   max-width: 1200px;
   margin: 0 auto;
   color: #fff;
   padding: 0 5%;
 }
-#feature-blocks .feature-blocks-container .content .title {
+.body #feature-blocks .feature-blocks-container .content .title {
   font-size: 18px;
 }
-#feature-blocks .feature-blocks-container .content .description,
-#feature-blocks .feature-blocks-container .content .feature-description {
+.body #feature-blocks .feature-blocks-container .content .description,
+.body #feature-blocks .feature-blocks-container .content .feature-description {
   font-size: 11px;
   font-weight: 400;
 }
-#feature-blocks .feature-blocks-container .content .feature-name {
+.body #feature-blocks .feature-blocks-container .content .feature-name {
   font-size: 12px;
 }
-#feature-blocks .feature-blocks-container .content .feature-icon {
+.body #feature-blocks .feature-blocks-container .content .feature-icon {
   width: 36px;
 }
-
+.body #footer {
+  background: #20484f;
+}
+.body #footer .content {
+  max-width: 1200px;
+  margin: 0 auto;
+  color: #fff;
+  padding: 0 5%;
+}
+.body #footer .content .social-icons a {
+  text-decoration: none;
+  margin: 10px;
+  color: #fff;
+}
+.body #footer .content .social-icons a .fab {
+  font-size: 20px;
+  border: 1px solid #fff;
+  border-radius: 50%;
+  padding: 10px;
+}
+.body #footer .content .social-icons a .fab:hover {
+  transform: scale(1.2);
+  scroll-behavior: smooth;
+}
+.body #footer .content .footer-nav h4 {
+  font-size: 20px;
+}
+.body #footer .content .footer-nav ul {
+  padding: 0;
+}
+.body #footer .content .footer-nav ul li {
+  list-style: none;
+}
+.body #footer .content .footer-nav ul li a {
+  text-decoration: none;
+  font-size: 15px;
+  font-weight: 400;
+  color: #dcf2ed;
+}
+.body #footer .content .footer-nav ul li:hover {
+  text-decoration: underline;
+}
+.body #footer .content .copyright {
+  color: #dcf2ed;
+  font-size: 12px;
+}
 @media (min-width: 768px) {
-  #header .header-container {
+  .body #header .header-container {
     padding: 10px 20px;
   }
-  #hero-section {
+  .body #header .header-container .logo {
+    font-size: 36px;
+  }
+  .body #hero-section {
     margin: 3rem auto;
   }
-  #hero-section .banner {
+  .body #hero-section .banner {
     width: 50%;
   }
-  #hero-section .title {
+  .body #hero-section .title {
     font-size: 50px;
   }
-  #hero-section .description {
+  .body #hero-section .description {
     font-size: 18px;
   }
-  #hero-section .email-input .email {
+  .body #hero-section .email-input .email {
     height: 58px;
     padding: 0 20px;
   }
-  #hero-section .email-input .sign-up {
+  .body #hero-section .email-input .sign-up {
     width: 136px;
     height: 58px;
   }
-  #team {
+  .body #team {
     padding: 0;
   }
-  #team .title {
+  .body #team .title {
     font-size: 40px;
   }
-  #team .description {
+  .body #team .description {
     font-size: 16px;
   }
-  #team .team-member .team-member-name {
+  .body #team .team-member .team-member-name {
     font-size: 24px;
   }
-  #team .team-member .team-img {
+  .body #team .team-member .team-img {
     max-width: 240px;
   }
-  #team .team-member .position {
+  .body #team .team-member .position {
     color: #20484f;
     font-size: 18px;
   }
-  #feature-blocks .feature-blocks-container .content {
+  .body #feature-blocks .feature-blocks-container .content {
     padding: 10px 20px;
   }
-  #feature-blocks .feature-blocks-container .content .title {
+  .body #feature-blocks .feature-blocks-container .content .title {
     font-size: 32px;
   }
-  #feature-blocks .feature-blocks-container .content .description,
-#feature-blocks .feature-blocks-container .content .feature-description {
+  .body #feature-blocks .feature-blocks-container .content .description,
+.body #feature-blocks .feature-blocks-container .content .feature-description {
     font-size: 16px;
   }
-  #feature-blocks .feature-blocks-container .content .feature-name {
+  .body #feature-blocks .feature-blocks-container .content .feature-name {
     font-size: 18px;
   }
-  #feature-blocks .feature-blocks-container .content .feature-icon {
+  .body #feature-blocks .feature-blocks-container .content .feature-icon {
     width: 56px;
+  }
+  .body #footer {
+    background: #20484f;
+  }
+  .body #footer .content {
+    max-width: 1200px;
+    margin: 0 auto;
+    color: #fff;
+    padding: 20px;
+  }
+  .body #footer .content .copyright {
+    font-size: 14px;
   }
 }
 
