--- a/style/main.scss
+++ b/style/main.scss
@@ -1,265 +1,334 @@
 @import "variables.scss";
 
-#header {
-    position: sticky;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1;
-    background-color: $primary-color;
-    .header-container {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin: 0 auto;
-        padding: 10px 5%;
-        max-width: 1200px;
-        .logo {
-            color: $white;
-        }
-        .nav ul {
+.body {
+    #header {
+        position: sticky;
+        top: 0;
+        left: 0;
+        right: 0;
+        z-index: 1;
+        background-color: $primary-color;
+        .header-container {
             display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin: 0 auto;
+            padding: 10px 5%;
+            max-width: 1200px;
+            .logo {
+                color: $white;
+                font-size: 28px;
+            }
+            .nav ul {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                li {
+                    margin: 0 10px;
+                    list-style: none;
+                    a {
+                        color: $white;
+                        text-decoration: none;
+                    }
+                }
+            }
+            .btn {
+                outline: none;
+                border: none;
+            }
+            .sign-up {
+                background-color: $light-green;
+                border-radius: 8px;
+            }
+            .login {
+                color: $white;
+            }
+            .mobile {
+                .menu-icon {
+                    display: block;
+                    cursor: pointer;
+                }
+                .close-icon {
+                    display: none;
+                }
+            }
+        }
+        #nav-mobile {
+            display: none;
+            position: absolute;
+            width: 100%;
+            height: 100vh;
+            z-index: 1;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
-            li {
-                margin: 0 10px;
-                list-style: none;
-                a {
-                    color: $white;
-                    text-decoration: none;
-                }
-            }
-        }
-        .btn {
-            outline: none;
-            border: none;
-        }
-        .sign-up {
-            background-color: $light-green;
-            border-radius: 8px;
-        }
-        .login {
-            color: $white;
-        }
-        .mobile {
-            .menu-icon {
-                display: block;
-                cursor: pointer;
-            }
-            .close-icon {
-                display: none;
-            }
-        }
-    }
-    #nav-mobile {
-        display: none;
-        position: absolute;
-        width: 100%;
-        height: 100vh;
-        z-index: 1;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        background: $light-green;
-        ul {
-            li {
-                list-style: none;
-                a {
-                    text-decoration: none;
-                    color: $primary-color;
-                    font-size: 24px;
-                }
-            }
-        }
-        border-top: 1px solid $primary-color;
-        color: $primary-color;
-        .sign-up {
-            background-color: $primary-color;
-            color: $white;
-            border-radius: 8px;
-        }
-    }
-}
-#hero-section {
-    max-width: 610px;
-    text-align: center;
-    margin: 1.5rem auto;
-    padding: 0 5%;
-    .banner {
-        width: 50%;
-    }
-    .title {
-        font-size: 30px;
-        font-weight: 700;
-        color: $dark;
-    }
-    .description {
-        font-size: 14px;
-        color: $primary-color;
-    }
-    .email-input {
-        position: relative;
-        max-width: 460px;
-        margin: 0 auto;
-        .email {
-            width: 100%;
-            height: 48px;
-            border: 1px solid $primary-color;
-            border-radius: 8px;
-            padding: 0 20px;
-            outline: none;
-            &::placeholder {
-                color: rgba(32, 72, 79, 0.2);
-                font-size: 18px;
-            }
-        }
-        .sign-up {
-            position: absolute;
-            top: 0;
-            right: 0;
-            width: 96px;
-            height: 48px;
-            border: none;
-            border: 1px solid $primary-color;
-            border-left: unset;
             background: $light-green;
-            border-top-right-radius: 8px;
-            border-bottom-right-radius: 8px;
+            ul {
+                li {
+                    list-style: none;
+                    a {
+                        text-decoration: none;
+                        color: $primary-color;
+                        font-size: 24px;
+                    }
+                }
+            }
+            border-top: 1px solid $primary-color;
+            color: $primary-color;
+            .sign-up {
+                background-color: $primary-color;
+                color: $white;
+                border-radius: 8px;
+            }
         }
     }
-}
-#team {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 1200px;
-    margin: 0 auto;
-    text-align: center;
-    padding: 0 5%;
-    .title {
-        font-size: 25px;
-        color: $dark;
-    }
-    .description {
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 150%;
-        color: $dark;
-    }
-    .team-member {
-        .team-member-name {
-            font-size: 18px;
+    #hero-section {
+        max-width: 610px;
+        text-align: center;
+        margin: 1.5rem auto;
+        padding: 0 5%;
+        .banner {
+            width: 50%;
+        }
+        .title {
+            font-size: 30px;
+            font-weight: 700;
             color: $dark;
         }
-        .team-img {
-            max-width: 225px;
-        }
-        .position {
+        .description {
+            font-size: 14px;
             color: $primary-color;
-            font-size: 13px;
         }
-        &:hover {
-            opacity: 0.5;
-            cursor: pointer;
+        .email-input {
+            position: relative;
+            max-width: 460px;
+            margin: 0 auto;
+            .email {
+                width: 100%;
+                height: 48px;
+                border: 1px solid $primary-color;
+                border-radius: 8px;
+                padding: 0 20px;
+                outline: none;
+                &::placeholder {
+                    color: rgba(32, 72, 79, 0.2);
+                    font-size: 18px;
+                }
+            }
+            .sign-up {
+                position: absolute;
+                top: 0;
+                right: 0;
+                width: 96px;
+                height: 48px;
+                border: none;
+                border: 1px solid $primary-color;
+                border-left: unset;
+                background: $light-green;
+                border-top-right-radius: 8px;
+                border-bottom-right-radius: 8px;
+            }
         }
     }
-}
-#feature-blocks {
-    .feature-blocks-divider {
-        width: 100%;
+    #team {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        max-width: 1200px;
+        margin: 0 auto;
+        text-align: center;
+        padding: 0 5%;
+        .title {
+            font-size: 25px;
+            color: $dark;
+        }
+        .description {
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 150%;
+            color: $dark;
+        }
+        .team-member {
+            .team-member-name {
+                font-size: 18px;
+                color: $dark;
+            }
+            .team-img {
+                max-width: 225px;
+            }
+            .position {
+                color: $primary-color;
+                font-size: 13px;
+            }
+            &:hover {
+                opacity: 0.5;
+                cursor: pointer;
+            }
+        }
     }
-    .feature-blocks-container {
+    #feature-blocks {
+        .feature-blocks-divider {
+            width: 100%;
+        }
+        .feature-blocks-container {
+            background: $primary-color;
+            margin-top: -7px;
+            .content {
+                max-width: 1200px;
+                margin: 0 auto;
+                color: $white;
+                padding: 0 5%;
+                .title {
+                    font-size: 18px;
+                }
+                .description,
+                .feature-description {
+                    font-size: 11px;
+                    font-weight: 400;
+                }
+                .feature-name {
+                    font-size: 12px;
+                }
+                .feature-icon {
+                    width: 36px;
+                }
+            }
+        }
+    }
+    #footer {
         background: $primary-color;
-        margin-top: -7px;
         .content {
             max-width: 1200px;
             margin: 0 auto;
             color: $white;
             padding: 0 5%;
-            .title {
-                font-size: 18px;
+            .social-icons {
+                a {
+                    text-decoration: none;
+                    margin: 10px;
+                    color: $white;
+                    .fab {
+                        font-size: 20px;
+                        border: 1px solid $white;
+                        border-radius: 50%;
+                        padding: 10px;
+                        &:hover {
+                            transform: scale(1.2);
+                            scroll-behavior: smooth;
+                        }
+                    }
+                }
             }
-            .description,
-            .feature-description {
-                font-size: 11px;
-                font-weight: 400;
+            .footer-nav {
+                h4 {
+                    font-size: 20px;
+                }
+                ul {
+                    padding: 0;
+
+                    li {
+                        list-style: none;
+                        a {
+                            text-decoration: none;
+                            font-size: 15px;
+                            font-weight: 400;
+                            color: #dcf2ed;
+                        }
+                        &:hover {
+                            text-decoration: underline;
+                        }
+                    }
+                }
             }
-            .feature-name {
+            .copyright {
+                color: #dcf2ed;
                 font-size: 12px;
             }
-            .feature-icon {
-                width: 36px;
-            }
         }
     }
-}
 
-@media (min-width: 768px) {
-    #header {
-        .header-container {
-            padding: 10px 20px;
-        }
-    }
-    #hero-section {
-        margin: 3rem auto;
-        .banner {
-            width: 50%;
-        }
-        .title {
-            font-size: 50px;
-        }
-        .description {
-            font-size: 18px;
-        }
-        .email-input {
-            .email {
-                height: 58px;
-                padding: 0 20px;
-            }
-            .sign-up {
-                width: 136px;
-                height: 58px;
+    @media (min-width: 768px) {
+        #header {
+            .header-container {
+                padding: 10px 20px;
+                .logo {
+                    font-size: 36px;
+                }
             }
         }
-    }
-    #team {
-        padding: 0;
-        .title {
-            font-size: 40px;
-        }
-        .description {
-            font-size: 16px;
-        }
-        .team-member {
-            .team-member-name {
-                font-size: 24px;
+        #hero-section {
+            margin: 3rem auto;
+            .banner {
+                width: 50%;
             }
-            .team-img {
-                max-width: 240px;
+            .title {
+                font-size: 50px;
             }
-            .position {
-                color: $primary-color;
+            .description {
                 font-size: 18px;
             }
+            .email-input {
+                .email {
+                    height: 58px;
+                    padding: 0 20px;
+                }
+                .sign-up {
+                    width: 136px;
+                    height: 58px;
+                }
+            }
         }
-    }
-    #feature-blocks {
-        .feature-blocks-container {
-            .content {
-                padding: 10px 20px;
-                .title {
-                    font-size: 32px;
+        #team {
+            padding: 0;
+            .title {
+                font-size: 40px;
+            }
+            .description {
+                font-size: 16px;
+            }
+            .team-member {
+                .team-member-name {
+                    font-size: 24px;
                 }
-                .description,
-                .feature-description {
-                    font-size: 16px;
+                .team-img {
+                    max-width: 240px;
                 }
-                .feature-name {
+                .position {
+                    color: $primary-color;
                     font-size: 18px;
                 }
-                .feature-icon {
-                    width: 56px;
+            }
+        }
+        #feature-blocks {
+            .feature-blocks-container {
+                .content {
+                    padding: 10px 20px;
+                    .title {
+                        font-size: 32px;
+                    }
+                    .description,
+                    .feature-description {
+                        font-size: 16px;
+                    }
+                    .feature-name {
+                        font-size: 18px;
+                    }
+                    .feature-icon {
+                        width: 56px;
+                    }
+                }
+            }
+        }
+        #footer {
+            background: $primary-color;
+            .content {
+                max-width: 1200px;
+                margin: 0 auto;
+                color: $white;
+                padding: 20px;
+                .copyright {
+                    font-size: 14px;
                 }
             }
         }
