--- a/style/main.scss
+++ b/style/main.scss
@@ -130,6 +130,33 @@
             }
         }
     }
+    #free-trial {
+        text-align: center;
+        padding: 0 5%;
+        .desc {
+            font-size: 14px;
+            color: $primary-color;
+            font-weight: 600;
+        }
+        .title {
+            font-size: 25px;
+            color: $dark;
+        }
+        .trial-btn {
+            border: none;
+            outline: none;
+            background-color: $primary-color;
+            color: $white;
+            border-radius: 8px;
+            width: 150px;
+            height: 48px;
+            &:hover {
+                border: 1px solid $primary-color;
+                background-color: transparent;
+                color: $primary-color;
+            }
+        }
+    }
     #team {
         display: flex;
         flex-direction: column;
@@ -330,6 +357,19 @@
                 .copyright {
                     font-size: 14px;
                 }
+            }
+        }
+        #free-trial {
+            .desc {
+                font-size: 18px;
+            }
+            .title {
+                font-size: 40px;
+                color: $dark;
+            }
+            .trial-btn {
+                width: 190px;
+                height: 58px;
             }
         }
     }
